--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "server": "nodemon index.js",
     "build": "npm i"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "author": "abhay patel",
   "license": "ISC",
   "dependencies": {
